; ModuleID = '/home/carl/AnghaBench/tmux/extr_paste.c_paste_make_sample.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_paste.c_paste_make_sample.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.paste_buffer = type { i64, i32 }

@VIS_OCTAL = common dso_local global i32 0, align 4
@VIS_TAB = common dso_local global i32 0, align 4
@VIS_NL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"...\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @paste_make_sample(%struct.paste_buffer* %0) #0 {
  %2 = alloca %struct.paste_buffer*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.paste_buffer* %0, %struct.paste_buffer** %2, align 8
  %8 = load i32, i32* @VIS_OCTAL, align 4
  %9 = load i32, i32* @VIS_TAB, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @VIS_NL, align 4
  %12 = or i32 %10, %11
  store i32 %12, i32* %6, align 4
  store i64 200, i64* %7, align 8
  %13 = load %struct.paste_buffer*, %struct.paste_buffer** %2, align 8
  %14 = getelementptr inbounds %struct.paste_buffer, %struct.paste_buffer* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  store i64 %15, i64* %4, align 8
  %16 = load i64, i64* %4, align 8
  %17 = icmp ugt i64 %16, 200
  br i1 %17, label %18, label %19

18:                                               ; preds = %1
  store i64 200, i64* %4, align 8
  br label %19

19:                                               ; preds = %18, %1
  %20 = load i64, i64* %4, align 8
  %21 = call i8* @xreallocarray(i32* null, i64 %20, i32 8)
  store i8* %21, i8** %3, align 8
  %22 = load i8*, i8** %3, align 8
  %23 = load %struct.paste_buffer*, %struct.paste_buffer** %2, align 8
  %24 = getelementptr inbounds %struct.paste_buffer, %struct.paste_buffer* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 8
  %26 = load i64, i64* %4, align 8
  %27 = load i32, i32* %6, align 4
  %28 = call i64 @utf8_strvis(i8* %22, i32 %25, i64 %26, i32 %27)
  store i64 %28, i64* %5, align 8
  %29 = load %struct.paste_buffer*, %struct.paste_buffer** %2, align 8
  %30 = getelementptr inbounds %struct.paste_buffer, %struct.paste_buffer* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = icmp ugt i64 %31, 200
  br i1 %32, label %36, label %33

33:                                               ; preds = %19
  %34 = load i64, i64* %5, align 8
  %35 = icmp ugt i64 %34, 200
  br i1 %35, label %36, label %40

36:                                               ; preds = %33, %19
  %37 = load i8*, i8** %3, align 8
  %38 = getelementptr inbounds i8, i8* %37, i64 200
  %39 = call i32 @strlcpy(i8* %38, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 4)
  br label %40

40:                                               ; preds = %36, %33
  %41 = load i8*, i8** %3, align 8
  ret i8* %41
}

declare dso_local i8* @xreallocarray(i32*, i64, i32) #1

declare dso_local i64 @utf8_strvis(i8*, i32, i64, i32) #1

declare dso_local i32 @strlcpy(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
